<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stereo_image_pipeline_examples</name>
  <version>0.3.0</version>
  <description>
    Provides Node wrappers to group together and demonstrate various
    combinations of hardware accelerated perception stereo pipelines
    using the stereo_image_pipeline package.
  </description>
  <maintainer email="dirksavage88@gmail.com">Dsavage</maintainer>
  <license>Apache License 2.0</license>
  <author email="dirksavage88@gmail.com">Dsavage</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_vitis</buildtool_depend>

  <depend>stereo_image_proc</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcl_interfaces</depend>
  <depend>image_transport</depend>
  <depend>acceleration_firmware_kv260</depend>
  <depend>vitis_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
